<resources>
    <string name="app_name">Cric Calc Riant</string>
    <string name="vs">VS</string>
    <string name="enterTeam1">Team-1</string>
    <string name="enterTeam2">Team-2</string>
    <string name="totalOver">Over/Innings</string>
    <string name="target">Target:</string>
    <string name="btn1stIn">Start First Innings</string>
    <string name="btn2ndIn">Start Second Innings</string>
    <string name="batting">Who\'s Batting?</string>
    <string name="justBatting">Batting</string>
    <string name="score">Score:</string>
    <string name="ov">Ov:</string>
    <string name="crr">CRR:</string>
    <string name="totalOv">Total Ov:</string>
    <string name="ovRem">Ov Rem:</string>
    <string name="showBatting">Batting:</string>
    <string name="set">SET</string>
    <string name="batman1">Bat\'s Man-1</string>
    <string name="batman">BATSMAN</string>
    <string name="batman2">Bat\'s Man-2</string>
    <string name="bowler">Bowler:</string>
    <string name="extreRun">Extra:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="wdnb">Wd/Nb</string>
    <string name="out">Out</string>
    <string name="bowling">Bowling:</string>
    <string name="balling">Balling</string>
    <string name="extrar">Extra</string>
    <string name="chS">ChStr</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="cTC">Copy to CB</string>
    <string name="targetView">Target:</string>
    <string name="rrr">RRR:</string>
    <string name="runreq">Run Req:</string>
    <string name="edit">Edit</string>
    <string name="copySucc">Copied to Clipboard</string>
    <string name="copyFail">Already Exists</string>
    <string name="teamECE">Team ECE</string>
    <string name="teamECEis">Team ECE is:</string>
    <string name="who">Who?</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="four_s">4s</string>
    <string name="six_s">6s</string>
    <string name="sr">SR</string>
    <string name="bowlerH">BOWLER</string>
    <string name="o">O</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="eco">ECO</string>
    <string name="wd">Wd</string>
    <string name="nb">Nb</string>
    <string name="bye">B</string>
    <string name="lbye">LB</string>
    <string name="starting">Starting:</string>
    <string name="ings2">2nd innings</string>
    <string name="ings1">1st innings</string>
    <string name="btnStart">Let\'s Start!</string>
    <string name="next">Next</string>


</resources>
