<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/teamECE"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/vs"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/red"
            />

        <EditText
            android:id="@+id/opName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:inputType="textPersonName"
            android:hint="@string/who"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamECEis"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioBatBall"
            android:checkedButton="@id/batting">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/batting"
                android:text="@string/justBatting"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balling"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingSel"
            android:checkedButton="@id/ings1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ings1"
                android:text="@string/ings1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ings2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:id="@+id/totalOver"
            android:hint="@string/totalOver"
            android:inputType="number"
            android:layout_weight="0.3"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            />
        <EditText
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4dp"
            android:id="@+id/target"
            android:inputType="number"
            android:hint="@string/target"
            android:layout_weight="0.5"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:id="@+id/btnNext"
            android:text="@string/next"/>

    </LinearLayout>

</LinearLayout>